refactor: apply functional programming principles and clean up code